<resources>
    <string name="app_name">Calculator</string>
    <string name="results">Results</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="reminder">%</string>
    <string name="equal">=</string>
    <string name="c">C</string>
    <string name="type_number">type number</string>

</resources>