<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/results"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorHint="#78909C"
        android:textSize="30sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <LinearLayout
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/plus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/plus"
            android:textColor="#fff"
            tools:ignore="TextContrastCheck" />
        <Space
            android:layout_width="10dp"
            android:layout_height="0dp">
        </Space>

        <Button
            android:id="@+id/minus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/minus"
            android:textColor="#fff"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp">
        </Space>
        <Button
            android:id="@+id/multiply"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/multiply"
            android:textColor="#fff"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp">
        </Space>

        <Button
            android:id="@+id/divide"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/divide"
            android:textColor="#fff"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/equal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#7A7283"
            android:text="@string/equal"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/clean"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/c" />


    </LinearLayout>
</LinearLayout>